--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="drawer_open">navigation_drawer_open</string>
     <string name="drawer_close">navigation_drawer_close</string>
+    <string name="hold_message">Please select the services students on fee hold <b>will not</b> be able to access</string>
+
 </resources>
