--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="drawer_open">navigation_drawer_open</string>
     <string name="drawer_close">navigation_drawer_close</string>
     <string name="hold_message">Please select the services students on fee hold <b>will not</b> be able to access</string>
+    <string name="active_hold">Please make payments at your campus cashier or pay now through the invoice section in your finance menu</string>
 
 </resources>
